# backend

./: .gitignore  Dockerfile  compose.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: config.py  database.py
app/books/: crud.py  models.py  schemas.py  views.py
