[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Nurlan-Aliev <nualiev612@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.11"}
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
